--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chalk": "4.1.0",
     "date-fns": "2.25.0",
     "enzyme": "3.11.0",
+    "express": "4.18.2",
     "history": "5.0.1",
     "js-cookie": "3.0.1",
     "msw": "0.35.0",
@@ -24,7 +25,9 @@
     "react-router-dom": "5.3.0",
     "react-slick": "0.28.1",
     "react-slick-slider": "0.15.10",
-    "slick-carousel": "1.8.1"
+    "slick-carousel": "1.8.1",
+    "sqlite": "5.0.1",
+    "sqlite3": "5.1.6"
   },
   "devDependencies": {
     "eslint-config-airbnb": "18.2.1",
